# oofcanvas

./: .gitignore  CMakeLists.txt  CODEMETA.yaml  CODEOWNERS  DIR.py  Makefile  README-old.md  README.md  TODO.txt  canvas.C  canvas.h  canvascircle.C  canvascircle.h  canvasimage.C  canvasimage.h  canvasitem.C  canvasitem.h  canvaslayer.C  canvaslayer.h  canvaspolygon.C  canvaspolygon.h  canvasrectangle.C  canvasrectangle.h  canvassegment.C  canvassegment.h  canvassegments.C  canvassegments.h  canvasshape.C  canvasshape.h  canvastest.C  canvastext.C  canvastext.h  canvastransformable.h  changelog.txt  chooser.py  fixlinks.py  gtktester.C  gtktester2.C  initgtk.py  make_dist  (+19 more)
OOFSWIG/Modules/: python.cxx
OOFSWIG/SWIG/: main.cxx  types.cxx
OOFSWIG/swig_lib/: swigptr.swg
OOFSWIG/swig_lib/python/: pyexp.swg  python.swg
SRC/: DIR.py  canvasitem.C  canvasitem.h  pythonexportable.h  swiglib.C
SRC/GUI/: DIR.py  oofcanvasgui.swg
SRC/oofcanvasgui/: __init__.py
TEST/: CMakeLists.txt  canvastest.C  sandbox.py  simple.py  test.py  testcanvas.py  texttest.C
oofcanvas/: CMakeLists.txt  DIR.py  __init__.py  canvas.C  canvas.h  canvas_public.C  canvas_public.h  canvascircle.C  canvascircle.h  canvasexception.C  canvasexception.h  canvasimage.C  canvasimage.h  canvasimpl.h  canvasitem.C  canvasitem.h  canvasitemimpl.h  canvaslayer.C  canvaslayer.h  canvaslayerimpl.h  canvaspolygon.C  canvaspolygon.h  canvasrectangle.C  canvasrectangle.h  canvassegment.C  canvassegment.h  canvassegments.C  canvassegments.h  canvasshape.C  canvasshape.h  canvasshapeimpl.C  canvasshapeimpl.h  canvastext.C  canvastext.h  cversion.C  npconvert.py  oofcanvas.h  oofcanvas.h.in  oofcanvas.spy  oofcanvas.swg  (+17 more)
oofcanvas/oofcanvasgui/: CMakeLists.txt  DIR.py  __init__.py  guicanvas.C  guicanvas.h  guicanvasimpl.h  guicanvaslayer.C  guicanvaslayer.h  oofcanvasgui.h  oofcanvasgui.swg  rubberband.C  rubberband.h
shlib/: install_shlib.py
